--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,12 @@
       "email": "diffmike@gmail.com"
     }
   ],
-  "minimum-stability": "dev",
   "require": {
     "php": ">=5.3.0"
   },
   "autoload": {
     "psr-4": {
-      "Blogger\\": "src/"
+      "app\\": "app/"
     }
   }
 }
